[tool.poetry]
name = "fastapi-redis-example"
version = "0.1.0"
description = ""
authors = ["michael kan <michael.kan.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
